fix issue with bar jumping below click and adding space to page

--- a/app/components/PatternLineTracker.module.css
+++ b/app/components/PatternLineTracker.module.css
@@ -36,4 +36,6 @@
 .patternContainer {
   position: relative;
   width: 100%;
+  height: 0;
+  overflow: visible;
 }
